--- a/about.html
+++ b/about.html
@@ -214,14 +214,14 @@
                             >
                                 <div class="row align-items-center">
                                     <div class="col-12 d-flex justify-content-end">
-                                        <p class="mb-0 fw-bolder">75%</p>
+                                        <p class="mb-0 fw-bolder">65%</p>
                                     </div>
                                     <div class="col-4">
-                                        <p class="mb-0 small lh-1">Javascript</p>
+                                        <p class="mb-0 small lh-1">R</p>
                                     </div>
                                     <div class="col-8">
                                         <div class="progress f-h-1">
-                                            <div class="progress-bar" role="progressbar" style="width: 75%"
+                                            <div class="progress-bar" role="progressbar" style="width: 65%"
                                                 aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                                         </div>
                                     </div>
@@ -235,14 +235,14 @@
                             >
                                 <div class="row align-items-center">
                                     <div class="col-12 d-flex justify-content-end">
-                                        <p class="mb-0 fw-bolder">95%</p>
+                                        <p class="mb-0 fw-bolder">50%</p>
                                     </div>
                                     <div class="col-4">
-                                        <p class="mb-0 small lh-1">PHP</p>
+                                        <p class="mb-0 small lh-1">Python</p>
                                     </div>
                                     <div class="col-8">
                                         <div class="progress f-h-1">
-                                            <div class="progress-bar" role="progressbar" style="width: 95%"
+                                            <div class="progress-bar" role="progressbar" style="width: 50%"
                                                 aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
                                         </div>
                                     </div>
@@ -256,14 +256,14 @@
                             >
                                 <div class="row align-items-center">
                                     <div class="col-12 d-flex justify-content-end">
-                                        <p class="mb-0 fw-bolder">65%</p>
+                                        <p class="mb-0 fw-bolder">40%</p>
                                     </div>
                                     <div class="col-4">
-                                        <p class="mb-0 small lh-1">HTML</p>
+                                        <p class="mb-0 small lh-1">GitHub</p>
                                     </div>
                                     <div class="col-8">
                                         <div class="progress f-h-1">
-                                            <div class="progress-bar" role="progressbar" style="width: 65%"
+                                            <div class="progress-bar" role="progressbar" style="width: 40%"
                                                 aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
                                         </div>
                                     </div>
@@ -277,62 +277,19 @@
                             >
                                 <div class="row align-items-center">
                                     <div class="col-12 d-flex justify-content-end">
-                                        <p class="mb-0 fw-bolder">35%</p>
+                                        <p class="mb-0 fw-bolder">90%</p>
                                     </div>
                                     <div class="col-4">
-                                        <p class="mb-0 small lh-1">CSS</p>
+                                        <p class="mb-0 small lh-1">Microsoft environment</p>
                                     </div>
                                     <div class="col-8">
                                         <div class="progress f-h-1">
-                                            <div class="progress-bar" role="progressbar" style="width: 35%"
+                                            <div class="progress-bar" role="progressbar" style="width: 90%"
                                                 aria-valuenow="35" aria-valuemin="0" aria-valuemax="100"></div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <!-- / Single Skill -->
-                            <!-- Single Skill-->
-                            <div class="col-12 col-lg-6 fade-in-up"
-                                data-scroll
-                                data-scroll-position="bottom" 
-                            >
-                                <div class="row align-items-center">
-                                    <div class="col-12 d-flex justify-content-end">
-                                        <p class="mb-0 fw-bolder">98%</p>
-                                    </div>
-                                    <div class="col-4">
-                                        <p class="mb-0 small lh-1">GraphQL</p>
-                                    </div>
-                                    <div class="col-8">
-                                        <div class="progress f-h-1">
-                                            <div class="progress-bar" role="progressbar" style="width: 98%"
-                                                aria-valuenow="98" aria-valuemin="0" aria-valuemax="100"></div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- / Single Skill -->
-                            <!-- Single Skill-->
-                            <div class="col-12 col-lg-6 fade-in-up"
-                                data-scroll
-                                data-scroll-position="bottom" 
-                            >
-                                <div class="row align-items-center">
-                                    <div class="col-12 d-flex justify-content-end">
-                                        <p class="mb-0 fw-bolder">45%</p>
-                                    </div>
-                                    <div class="col-4">
-                                        <p class="mb-0 small lh-1">Python</p>
-                                    </div>
-                                    <div class="col-8">
-                                        <div class="progress f-h-1">
-                                            <div class="progress-bar" role="progressbar" style="width: 45%"
-                                                aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- / Single Skill -->
                     </div>
             </div>
             <!-- /Skills Section-->            <!-- / Skills-->
@@ -343,10 +300,6 @@
 
         <!-- Footer -->
         <!-- Footer-->
-        <div class="d-flex align-items-center justify-content-center flex-column col-lg-7 col-xl-6 col-xxl-5 text-center mx-auto mt-5 px-4 px-md-0 mt-lg-10" data-scroll-section>
-            <h4 class="display-5 mb-5" data-scroll data-scroll-speed=".8" data-scroll-delay="0.05">Ready to discuss your project requirements?</h4>
-            <a href="./contact.html" class="btn btn-primary">Get In Touch</a>
-        </div>
         
         <footer class="border-top mt-10 pt-5 pb-8  " data-scroll-section>
         <div class="container d-flex justify-content-between">
