--- a/work-listing.html
+++ b/work-listing.html
@@ -43,7 +43,7 @@
   </noscript>
 
   <!-- Page Title -->
-  <title>Bootstrap 5 HTML Template</title>
+  <title>ANV Resume</title>
 
 </head>
 <body class="">
@@ -55,7 +55,7 @@
           <div class="container-fluid">
             <a class="navbar-brand d-flex align-items-center fade-in" href="./index.html" data-scroll>
               <picture class="avatar me-3" data-scroll data-scroll-speed="10" data-scroll-direction="horizontal" data-scroll-position="top">
-                <img class="img-fluid rounded-circle" src="./assets/images/avatar-small.jpg" alt="HTML Bootstrap Template by Pixel Rocket">
+                <img class="img-fluid rounded-circle" src="./assets/images/photo.jpg" alt="HTML Bootstrap Template by Pixel Rocket">
               </picture>
               <span class="fw-bolder fs-6 d-flex justify-content-start" data-scroll-section>
                 <span class="fade-in" data-scroll data-scroll-speed="2" data-scroll-delay=".03" data-scroll-position="top">Jenny Smith</span>
@@ -74,7 +74,7 @@
                   <a class="nav-link" href="./about.html">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./work-listing.html">Work</a>
+                  <a class="nav-link" href="./work-listing.html">Education</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="./contact.html">Contact</a>
@@ -92,7 +92,7 @@
         <section class="container py-3 " data-scroll-section>
             <!-- Page Content Goes Here -->
 
-            <h1 class="display-3 mb-5"  data-scroll data-scroll-speed="6" data-scroll-position="top">My Work</h1>
+            <h1 class="display-3 mb-5"  data-scroll data-scroll-speed="6" data-scroll-position="top">Educationk</h1>
 
             <div class="row g-8" data-scroll
             data-scroll-position="bottom" >
@@ -103,15 +103,10 @@
                         class="col-12 col-md-6 fade-in-left"
                     >
                         <div class="position-relative">
-                            <a class="link-cover" href="./work-single.html">
-                                <picture>
-                                    <img class="img-fluid" src="./assets/images/project-listing-1.jpg" alt="">
-                                </picture>
-                            </a>
-                            <p class="subtitle-xs mb-0 mt-4"><span class='me-2'>Ecommerce</span> &middot; <span class='ms-2'>Shopify</span></p>
-                            <p class="fw-bolder lead mb-3 mt-2">Shopify Fashion Store</p>
-                            <p class="small text-muted mb-2">Design and development of a custom Shopify Ecommerce platform for a fashion retailer.</p>
-                            <a class="link-body" href="./work-single.html">View Project</a>
+                            <p class="subtitle-xs mb-0 mt-4"><span class='me-2'>Social Policy> &middot; <span class='ms-2'>Evidence Based intervention</span></p>
+                            <p class="fw-bolder lead mb-3 mt-2">Master of Science in Evidence Based Social Intervention and Policy Evaluation</p>
+                            <p class="small text-muted mb-2"> I attended the Departament of Social Intervention and Policy Evaluation from the University Of Oxford at the United Kingdom. I received the Generacion del Bicentenario Scholarship, granted by the Peruvian Government addressed to oustanding students.</p>
+                            <a class="link-body" href="https://www.spi.ox.ac.uk/">View Institution</a>
                         </div>
                     </div>
                     <!-- / Single Work -->
